VoiceOver Firefox Item menu buttons are not recognized as form fields
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
People
(Reporter: testertesting989, Assigned: morgan)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36
Steps to reproduce:
MacOS 10.15.7 / 11.3
Firefox 89.0b8
https://capt-tds-uat.cambiumast.com/student
- Start VoiceOver
- Launch “VoiceOver Utility Application” in “/Applications/Utilities”
a.) Switch to commanders panel and select the Quick Nav Tab.
b.) Check "Enable Quick Nav" and "Enable single-key webpage navigation when using Quick Nav", if not currently checked
c.) Close "VoiceOver Utility" - Launch browser to https://capt-tds-uat.cambiumast.com/student
- Press Sign in and on the second screen select Grade 5 and then press"Start Grades 3-5 ELA Training Test
- On settings page select "streamlined mode" and leave all other settings the same.
- Perform the sound/video check and proceed to the start test page.
- Press "Begin test now" button. test""
- Press "3" to move VoiceOver to the First question.
- Press “j" VoiceOver moves to First Radio Button in question.
Actual results:
Focus moves to First Radio Button in Question
Expected results:
Focus should move to Item 1 menu.
Note: Firefox with JAWS and the "f" key moves to the pop-up menu. Safari with VoiceOver works with either the "j" or "b" to move from the heading to the menu button.
| Reporter | ||
Updated•5 years ago
|
Comment 1•5 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Disability Access APIs' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Comment 4•5 years ago
|
||
| bugherder | ||
Updated•5 years ago
|
Comment 5•5 years ago
|
||
Reproduced the issue on Firefox 90.0a1 (2021-05-07) under macOS 10.15.7 by following the info provided in Comment 0.
The issue is fixed on Firefox 90.0b4 and Firefox 91.0a1 (2021-06-07) on the same machine.
Description
•