Bug 1710748: Return button menus when form controls are queried from rotor r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D115429